<?php
/**
 * Simple Double Entry Accounting
 *
 * @author Ashley Kitson
 * @copyright Ashley Kitson, 2015, UK
 * @license GPL V3+ See LICENSE.md
 */
namespace SAccounts;

use chippyash\Type\String\DigitType;

/**
 * An Account Nominal code or Id
 */
class Nominal extends DigitType {}